# nas_tuner

./: configuration_minicpm.py  dataloader.py  debug_nsa.py  ds_config.json  hf_train.py  llama_nsa.py  modeling_minicpm.py  nsa_llama_train.py  nsa_qwen2_train.py  qwen_nsa.py  requirements.txt  test_minicpm.py  test_nsa.py  train.py
native_sparse_attention_pytorch/: README.md  pyproject.toml  test_flex_masks.py  test_triton_nsa.py  train.py
native_sparse_attention_pytorch/native_sparse_attention_pytorch/: __init__.py  backup_native_sparse_attention.py  compress_networks.py  native_sparse_attention.py  transformer.py  triton_native_sparse_attention.py
native_sparse_attention_pytorch/tests/: test_custom_compress_mlp.py  test_sparse_attn.py
nsa_utils/: dataloader.py  llama_nsa.py  qwen_nsa.py
