[project]
name = "native-sparse-attention-pytorch"
version = "0.2.0"
description = "Native Sparse Attention"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'efficient attention'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "jaxtyping",
    "local-attention>=1.11.1",
    "rotary-embedding-torch",
    "torch>=2.5",
]

[project.urls]
Homepage = "https://pypi.org/project/native-sparse-attention-pytorch/"
Repository = "https://github.com/lucidrains/native-sparse-attention-pytorch"

[project.optional-dependencies]

examples = [
    "tqdm",
    "wandb"
]
test = [
    "pytest",
    "tqdm",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["native_sparse_attention_pytorch"]
